--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   },
   "dependencies": {
     "cross-env": "^5.2.0",
-    "nuxt": "^2.4.0"
+    "nuxt": "^2.4.0",
+    "nuxt-client-init-module": "^0.1.4"
   },
   "devDependencies": {
     "nodemon": "^1.18.9",
